# omen

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BUGS_FOUND.md  BULK_OPTIMIZATION_STATUS.md  CLAUDE.md  COMPETITIVE_PERFORMANCE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS.md  CONTEXT.md  CONTRIBUTING.md  CRITICAL_FINDINGS.md  Cargo.toml  DATA_STRUCTURES_STRATEGY.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  ERROR_HANDLING_AUDIT.md  FFI_BRIDGE_DESIGN.md  FINAL_ANALYSIS.md  FINAL_STRATEGY.md  LEARNED_DB_BUSINESS_PLAN.md  MIGRATION_CHECKLIST.md  MOJO_ARCHITECTURE_ANALYSIS.md  MONOREPO_SETUP.md  NEXT_STEPS.md  NEXT_STEPS_STRATEGY.md  OMENDB_COLLECTIONS_DESIGN.md  OPTIMIZATION_STRATEGY_ANALYSIS.md  PERFORMANCE_DEMO.md  PGVECTOR_BENCHMARK_100K_RESULTS.md  PIVOT_ANALYSIS.md  PRODUCTION_DECISION.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READY.md  PRODUCT_ROADMAP.md  README.md  README_PYTHON.md  REALISTIC_ARCHITECTURE_DECISION.md  REALITY_CHECK.md  REPOSITORY_STRATEGY.md  (+26 more)
engines/zendb/: Cargo.toml  LICENSE  test_embedded.db
engines/zendb/benches/: storage_bench.rs
engines/zendb/docs/: BUSINESS_MODEL.md  DEVELOPMENT.md  GITHUB_INTEGRATION.md
engines/zendb/examples/: basic_usage.rs
engines/zendb/src/: main.rs
engines/zendb/src/storage/: btree.rs  multiwriter.rs
engines/zendb/src/transaction/: two_phase_commit.rs
engines/zendb/src/wal/: mod.rs
engines/zendb/tests/: integration_test.rs  mvcc_test.rs  page_manager_test.rs  property_tests.proptest-regressions  property_tests.rs  two_phase_commit_test.rs  wal_test.rs
internal/archive/vector-db-legacy/server/: Cargo.toml  Dockerfile  README.md  SECURITY_NOTICE.md  build.rs
learneddb/: Cargo.toml  README.md
learneddb/examples/: demo.rs  transaction_demo.rs
learneddb/src/: lib.rs  python.rs  transaction.rs
learneddb/src/engines/: compute.rs  index.rs  index_fixed.rs  mod.rs  storage.rs
omendb-rust/: ARCHITECTURE_LIMITATIONS.md  Cargo.toml  DATAFUSION_MIGRATION.md  Dockerfile  LIBRARY_DECISIONS.md  PERFORMANCE.md  PGWIRE_NOTES.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SESSION_SUMMARY_OCT1.md  SESSION_SUMMARY_OCT1_DAY2.md  STRUCTURED_LOGGING.md  TIER1_PROGRESS.md  V0.2.0_VERIFICATION_REPORT.md  VERIFICATION_COMPLETE.md  WEEK1_SUMMARY.md
omendb-rust/docs/runbooks/: security.md
omendb-rust/examples/: multi_table.rs  my_first_db.rs  programmatic_api.rs
omendb-rust/k8s/: README.md  cleanup.sh
omendb-rust/k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
omendb-rust/k8s/overlays/development/: deployment-patch.yaml  kustomization.yaml
omendb-rust/k8s/overlays/production/: deployment-patch.yaml  kustomization.yaml
omendb-rust/monitoring/: prometheus.yml
omendb-rust/scripts/: coverage.sh  run_medium_scale_test.sh
omendb-rust/src/: backup.rs  bench_arrow.rs  catalog.rs  concurrent.rs  connection_pool.rs  index.rs  integration_tests.rs  lib.rs  metrics.rs  multi_table_tests.rs  mvcc.rs  query_engine.rs  redb_storage.rs  row.rs  scale_tests.rs  security.rs  server.rs  sql_engine.rs  storage.rs  storage_backend.rs  table.rs  table_index.rs  table_wal.rs  value.rs  wal.rs
omendb-rust/src/datafusion/: mod.rs
omendb-rust/src/tests/: index_tests.rs  mod.rs  stress_tests.rs
omendb-rust/tests/: aggregate_tests.rs  comprehensive_integration_test.rs  edge_case_tests.rs  health_check_tests.rs  logging_tests.rs  metrics_integration_tests.rs  order_limit_tests.rs  sql_correctness_tests.rs  timeout_resource_tests.rs  transaction_tests.rs
omendb/engine/: BATCH_INSERTION_OPTIMIZATION_STRATEGY.md  CHANGELOG.md  CLAUDE.md  ENTERPRISE_100K_RESULTS.md  HNSW_CRITICAL_ANALYSIS.md  Makefile  OPTIMIZATION_RESULTS.md  PHASE1_BATCH_OPTIMIZATION_RESULTS.md  PHASE2_BULK_OPTIMIZATION_BREAKTHROUGH.md  STRATEGIC_ACHIEVEMENT_SUMMARY.md  ZERO_COPY_FFI_BREAKTHROUGH.md  adaptive_storage_analysis.py  analyze_gpu_acceleration_opportunities.py  analyze_performance_bottlenecks.py  benchmark_mmap.py  benchmark_results.json  benchmark_segmented.py  benchmark_simd_per_dimension.py  critical_performance_analysis.py  design_metal_gpu_acceleration.py  final_hnsw_quality_test.py  implement_comprehensive_benchmarks.py  implement_sift1m_benchmark.py  mixed_mode_debug.py  optimization_audit.py  optimize_search_parameters.py  pixi.toml  production_db.py  profile_bottlenecks.py  pyproject.toml  quick_test.py  realistic_benchmark_20250917_143740.json  scale_test_results.json  segmented_hnsw_design.mojo  segmented_index.py  stability_test_results.txt  test_c_ffi  test_c_ffi.c  test_hnsw_fixed  test_storage_benchmark.mojo  (+1 more)
omendb/engine/archive/: native_complete.mojo
omendb/engine/benchmarks/: CRITICAL_ISSUES.md  FINAL_STATUS.md  MEMORY_FIX_SUMMARY.md  PROGRESS_SUMMARY.md  benchmark_competitive.py  benchmark_comprehensive.py  benchmark_fixed_hnsw.py  benchmark_sift1m_validation.py  profile_auto_batch.py  summary_aug_29.md
omendb/engine/examples/: best_practices.py  monitoring_integration_example.py  production_observability_simple.py
omendb/engine/omendb/: __init__.mojo  c_exports.mojo  native.mojo  native_hnsw.mojo  native_old_backup.mojo  storage_direct.mojo  storage_optimized.mojo  storage_v2.mojo  storage_v3_simple.mojo  storage_v3_wrapper.mojo
omendb/engine/omendb/storage/: wal.mojo  (+1 more)
omendb/engine/scripts/: build-cross-platform.sh  regression_monitor.py  run-ci-benchmarks.sh  run-production-benchmarks.sh  run-test.sh  validate-gpu-support.sh
omendb/engine/storage-rs/: Cargo.toml
omendb/learned/: Cargo.toml
omendb/learned/src/: error.rs  lib.rs
omendb/server/: README.md  SERVER_INTEGRATION_TEST_RESULTS.md  config.toml  pyproject.toml
omendb/server/benchmarks/: full_stack_benchmark.py  measure_c_ffi_performance.py
omendb/server/docs/: GPU_STRATEGY.md
omendb/server/k8s/: README.md  configmap.yaml  hpa.yaml  kustomization.yaml  monitoring.yaml  network-policy.yaml  secret.yaml
omendb/server/proto/: omendb.proto
omendb/server/scripts/: deploy.sh
omendb/server/src/: config.rs  lib.rs  main.rs  metrics.rs  resources.rs  storage.rs
pgrx-extension/: Cargo.toml  omendb_pg.control
pgrx-extension/src/: lib.rs
(+1442 files in other folders)
