[package]
name = "omendb"
version = "0.1.0"
edition = "2021"
authors = ["OmenDB Inc."]
description = "World's first database using only learned indexes"
license = "Proprietary"

[lib]
name = "omendb"
path = "src/lib.rs"

[[bin]]
name = "omendb"
path = "src/main.rs"

[[bin]]
name = "bench_arrow"
path = "src/bench_arrow.rs"

[[bin]]
name = "scale_test"
path = "src/bin/scale_test.rs"

[[bin]]
name = "secure_server"
path = "src/bin/secure_server.rs"

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"

[[bin]]
name = "backup_tool"
path = "src/bin/backup_tool.rs"

[[bin]]
name = "test_backup"
path = "src/bin/test_backup.rs"

[[bin]]
name = "benchmark_vs_btree"
path = "src/bin/benchmark_vs_btree.rs"

[[bin]]
name = "sql_demo"
path = "src/bin/sql_demo.rs"

[[bin]]
name = "benchmark_full_system"
path = "src/bin/benchmark_full_system.rs"

[[bin]]
name = "benchmark_redb_learned"
path = "src/bin/benchmark_redb_learned.rs"

[[bin]]
name = "benchmark_datafusion_sql"
path = "src/bin/benchmark_datafusion_sql.rs"

[[bin]]
name = "postgres_server"
path = "src/bin/postgres_server.rs"

[[bin]]
name = "postgres_alex_server"
path = "src/bin/postgres_alex_server.rs"

[[bin]]
name = "rest_server"
path = "src/bin/rest_server.rs"

[[bin]]
name = "benchmark_vs_sqlite"
path = "src/bin/benchmark_vs_sqlite.rs"

[[bin]]
name = "benchmark_honest_comparison"
path = "src/bin/benchmark_honest_comparison.rs"

[[bin]]
name = "profile_benchmark"
path = "src/bin/profile_benchmark.rs"

[[bin]]
name = "profile_alex_detailed"
path = "src/bin/profile_alex_detailed.rs"

[[bin]]
name = "test_1m_alex"
path = "src/bin/test_1m_alex.rs"

[[bin]]
name = "benchmark_simd_search"
path = "src/bin/benchmark_simd_search.rs"

[[bin]]
name = "benchmark_comprehensive"
path = "src/bin/benchmark_comprehensive.rs"

[[bin]]
name = "benchmark_fair_comparison"
path = "src/bin/benchmark_fair_comparison.rs"

[[bin]]
name = "benchmark_mmap_validation"
path = "src/bin/benchmark_mmap_validation.rs"

[[bin]]
name = "benchmark_alex_storage"
path = "src/bin/benchmark_alex_storage.rs"

[[bin]]
name = "benchmark_alex_improvements"
path = "src/bin/benchmark_alex_improvements.rs"

[[bin]]
name = "benchmark_temperature"
path = "src/bin/benchmark_temperature.rs"

[[bin]]
name = "benchmark_htap"
path = "src/bin/benchmark_htap.rs"

[[bin]]
name = "benchmark_table_vs_sqlite"
path = "src/bin/benchmark_table_vs_sqlite.rs"


[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

# Integration testing
wiremock = "0.6"
assert_cmd = "2.0"
predicates = "3.0"

# PostgreSQL client for testing wire protocol
tokio-postgres = "0.7"

# HTTP client for testing REST API
reqwest = { version = "0.12", features = ["json"] }

[dependencies]
# SQLite for comparison benchmarks
rusqlite = { version = "0.32", features = ["bundled"] }

# Memory optimization
lazy_static = "1.4"

# SQL Engine - Apache DataFusion
datafusion = "43"

# OLTP Storage - Pure Rust embedded database
redb = "2.1"

# RocksDB - High-performance storage engine (Facebook)
# Used as fast storage layer with ALEX learned indexes
rocksdb = "0.24"

# Arrow for columnar storage (upgraded for DataFusion compatibility)
arrow = "53"
parquet = "53"

# SQL parsing (keep for compatibility during migration)
sqlparser = "0.49"

# PostgreSQL Wire Protocol
pgwire = "0.27"

# HTTP REST API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-full", "cors"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Configuration Management
figment = { version = "0.10", features = ["toml", "env"] }

# Compression (Parquet + network)
zstd = "0.13"

# Data Export (PostgreSQL COPY)
csv = "1.3"

# Rate Limiting
governor = "0.6"

# Async Utilities
futures = "0.3"

# Better Error Messages
miette = { version = "7.0", features = ["fancy"] }

# Async runtime for storage operations
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# WAL support
crc32fast = "1.4"
chrono = { version = "0.4", features = ["serde"] }

# Testing
tempfile = "3.8"

# Monitoring and Logging
prometheus = "0.13"
once_cell = "1.19"
hyper = { version = "0.14", features = ["full"] }
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Security
base64 = "0.21"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"

# Backup and compression
flate2 = "1.0"
sha2 = "0.10"
rand = "0.8"
rand_distr = "0.4"
glob = "0.3"

# async-trait used by other modules
async-trait = "0.1"

# CLI tools
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
lru = "0.16.1"

# Memory-mapped I/O (for custom storage validation)
memmap2 = "0.9"
sys-info = "0.9.1"

[features]
default = []
simd = []  # Enable std::simd (requires nightly Rust)

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "stress_test_concurrent"
path = "src/bin/stress_test_concurrent.rs"

[[bin]]
name = "profile_query_path"
path = "src/bin/profile_query_path.rs"

[[bin]]
name = "test_edge_cases"
path = "src/bin/test_edge_cases.rs"

[[bin]]
name = "benchmark_multi_level_alex"
path = "src/bin/benchmark_multi_level_alex.rs"

[[bin]]
name = "test_multi_level"
path = "src/bin/test_multi_level.rs"

[[bin]]
name = "debug_multi_level"
path = "src/bin/debug_multi_level.rs"

[[bin]]
name = "benchmark_multilevel_vs_sqlite"
path = "src/bin/benchmark_multilevel_vs_sqlite.rs"

[[bin]]
name = "stress_test_100m"
path = "src/bin/stress_test_100m.rs"

[[bin]]
name = "test_25m_quick"
path = "src/bin/test_25m_quick.rs"

[[bin]]
name = "test_postgres_compatibility"
path = "src/bin/test_postgres_compatibility.rs"

[[bin]]
name = "ycsb_benchmark"
path = "src/bin/ycsb_benchmark.rs"

[[bin]]
name = "ycsb_quick_test"
path = "src/bin/ycsb_quick_test.rs"

[[bin]]
name = "ycsb_subset"
path = "src/bin/ycsb_subset.rs"

[[bin]]
name = "htap_demo"
path = "src/bin/htap_demo.rs"

[[bin]]
name = "stress_test_concurrent_advanced"
path = "src/bin/stress_test_concurrent_advanced.rs"

[[bin]]
name = "benchmark_memory_optimization"
path = "src/bin/benchmark_memory_optimization.rs"

[[bin]]
name = "test_extreme_scale"
path = "src/bin/test_extreme_scale.rs"

[[bin]]
name = "crash_recovery_test"
path = "src/bin/crash_recovery_test.rs"

[[bin]]
name = "durability_validation"
path = "src/bin/durability_validation.rs"
