[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "omendb"
version = "0.1.0"
authors = [
    {name = "OmenDB Team", email = "hello@omendb.com"},
]
description = "10x faster learned database with ML-powered indexing"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["database", "learned-index", "machine-learning", "vector-search", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://omendb.com"
Documentation = "https://docs.omendb.com"
Repository = "https://github.com/omendb/core"
Issues = "https://github.com/omendb/core/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "omendb._omendb"