[package]
name = "learneddb"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
bytes = "1.5"

# Use our core learned index library
omendb = { path = "../" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

