[package]
name = "learneddb"
version = "0.1.0"
edition = "2021"

[lib]
name = "omendb_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
rocksdb = "0.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

# Use our core learned index library
omendb = { path = "../" }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

