[package]
name = "omendb"
version = "0.1.0"
edition = "2021"
authors = ["OmenDB Inc."]
description = "World's first database using only learned indexes"
license = "Proprietary"

[lib]
name = "omendb"
path = "src/lib.rs"

[[bin]]
name = "omendb"
path = "src/main.rs"

[[bin]]
name = "bench_arrow"
path = "src/bench_arrow.rs"

[dependencies]
# Arrow for columnar storage (Week 3)
arrow = "45.0"
parquet = "45.0"

# Async runtime for storage operations
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# WAL support
crc32fast = "1.4"
chrono = { version = "=0.4.24", features = ["serde"] }

# Testing
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3