[package]
name = "omendb"
version = "0.1.0"
edition = "2021"
authors = ["OmenDB Inc."]
description = "World's first database using only learned indexes"
license = "Proprietary"

[lib]
name = "omendb"
path = "src/lib.rs"

[[bin]]
name = "omendb"
path = "src/main.rs"

[[bin]]
name = "bench_arrow"
path = "src/bench_arrow.rs"

[[bin]]
name = "scale_test"
path = "src/bin/scale_test.rs"

[[bin]]
name = "secure_server"
path = "src/bin/secure_server.rs"

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"

[[bin]]
name = "backup_tool"
path = "src/bin/backup_tool.rs"

[[bin]]
name = "test_backup"
path = "src/bin/test_backup.rs"


[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

[dependencies]
# Arrow for columnar storage (Week 3)
arrow = "45.0"
parquet = "45.0"

# Async runtime for storage operations
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# WAL support
crc32fast = "1.4"
chrono = { version = "=0.4.24", features = ["serde"] }

# Testing
tempfile = "3.8"

# Monitoring
prometheus = "0.13"
once_cell = "1.19"
hyper = { version = "0.14", features = ["full"] }
bytes = "1.5"

# Security
base64 = "0.21"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"

# Backup and compression
flate2 = "1.0"
sha2 = "0.10"
rand = "0.8"
rand_distr = "0.4"
glob = "0.3"

# async-trait used by other modules
async-trait = "0.1"

# CLI tools
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3