[package]
name = "omendb_pg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pgrx = "=0.16.1"
omendb = { path = ".." }

[dev-dependencies]
pgrx-tests = "=0.16.1"

[features]
default = ["pg14"]
pg_test = []
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
