[build-system]
requires = ["hatchling", "setuptools>=61.0"]
build-backend = "hatchling.build"

[project]
name = "omendb"
version = "0.1.2"
description = "High-performance embedded vector database"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Elastic-2.0"}
authors = [
    {name = "nijaru"},
]
keywords = ["vector", "database", "embeddings", "similarity", "search", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/omendb/omendb"
Repository = "https://github.com/omendb/omendb"
Issues = "https://github.com/omendb/omendb/issues"

[tool.hatch.build.targets.wheel]
packages = ["python/omendb"]

[tool.hatch.build.targets.wheel.force-include]
"python/omendb/native.so" = "omendb/native.so"
"python/omendb/libomendb.dylib" = "omendb/libomendb.dylib"

[tool.hatch.build.targets.wheel.sources]
"python" = ""


[tool.pytest.ini_options]
testpaths = ["test/python"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "memory: marks tests that check memory usage",
]