[build-system]
requires = ["hatchling", "setuptools>=61.0"]
build-backend = "hatchling.build"

[project]
name = "omendb-server"
version = "0.1.0"
description = "Enterprise vector database server with advanced features"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "OmenDB Team", email = "team@omendb.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["omendb>=0.1.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://omendb.com"
Repository = "https://github.com/nijaru/omendb-server"
Issues = "https://github.com/nijaru/omendb-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/omendb_server"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.include]
"src/omendb_server/*.so" = "omendb_server/"
"src/omendb_server/*.dylib" = "omendb_server/"
"src/omendb_server/*.dll" = "omendb_server/"