[package]
name = "omendb-storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "omendb_storage"
crate-type = ["cdylib", "staticlib"]  # Both dynamic and static linking

[dependencies]
# Core dependencies - proven, minimal
memmap2 = "0.9"              # Cross-platform mmap (successor to memmap)
parking_lot = "0.12"         # Faster, smaller RwLock/Mutex
bytemuck = { version = "1.16", features = ["derive"] }  # Safe transmute for float arrays
libc = "0.2"                 # C types for FFI

# Optional but recommended
mimalloc = { version = "0.1", default-features = false }  # Better allocator
thiserror = "1.0"            # Better error handling

[dev-dependencies]
tempfile = "3.8"             # For testing
criterion = "0.5"            # Benchmarking
proptest = "1.4"             # Property-based testing

[profile.release]
lto = true                   # Link-time optimization
codegen-units = 1            # Single codegen unit for better optimization
opt-level = 3                # Maximum optimization
strip = true                 # Strip symbols for smaller binary

[profile.dev]
opt-level = 1                # Some optimization even in debug

[features]
default = ["mimalloc"]
mimalloc = ["mimalloc/override"]  # Use mimalloc as global allocator