[package]
name = "omendb-server"
version = "0.1.0"
edition = "2021"
authors = ["OmenDB Team <team@omendb.com>"]
description = "High-performance vector database server with Mojo FFI integration"
license = "Apache-2.0"
repository = "https://github.com/omendb/omendb-server"
keywords = ["vector-database", "similarity-search", "machine-learning", "ai"]
categories = ["database", "science"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "timeout"] }

# gRPC server
tonic = { version = "0.12", features = ["transport", "codegen", "prost"] }
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database and storage
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Authentication and security
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"

# Configuration
config = "0.14"
clap = { version = "4", features = ["derive"] }

# Monitoring and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
metrics = "0.22"
metrics-prometheus = "0.7"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Memory management
bytes = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# FFI
libc = "0.2"
pyo3 = { version = "0.25", features = ["auto-initialize"] }
# numpy = { version = "0.24", features = ["pyo3-0-25"] }  # TODO: Add when needed for zero-copy

# Resource management
deadpool = "0.10"
parking_lot = "0.12"

# Additional dependencies
base64 = "0.22"
fastrand = "2"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1"
toml = "0.8"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
axum-test = "14"
tempfile = "3"

[[bin]]
name = "omendb-server"
path = "src/main.rs"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
